SA throws sun.jvm.hotspot.debugger.UnmappedAddressException when it should not

XMLWordPrintable

    • svc
    • b52
    • x86
    • linux

        When running SA on a 64bit linux core, an exception is thrown.

        Exception in thread "main" sun.jvm.hotspot.debugger.UnmappedAddressException
                at sun.jvm.hotspot.debugger.PageCache.checkPage(PageCache.java:208)
                at sun.jvm.hotspot.debugger.PageCache.getData(PageCache.java:63)
                at sun.jvm.hotspot.debugger.DebuggerBase.readBytes(DebuggerBase.java:217)
                at sun.jvm.hotspot.debugger.linux.LinuxDebuggerLocal.readCInteger(LinuxDebuggerLocal.java:482)
                at sun.jvm.hotspot.debugger.linux.LinuxAddress.getCIntegerAt(LinuxAddress.java:69)
                at sun.jvm.hotspot.utilities.CStringUtilities.getString(CStringUtilities.java:61)
                at sun.jvm.hotspot.HotSpotTypeDataBase.readVMTypes(HotSpotTypeDataBase.java:128)
                at sun.jvm.hotspot.HotSpotTypeDataBase.<init>(HotSpotTypeDataBase.java:85)
                at sun.jvm.hotspot.bugspot.BugSpotAgent.setupVM(BugSpotAgent.java:568)
                at sun.jvm.hotspot.bugspot.BugSpotAgent.go(BugSpotAgent.java:494)
                at sun.jvm.hotspot.bugspot.BugSpotAgent.attach(BugSpotAgent.java:348)
                at sun.jvm.hotspot.tools.Tool.start(Tool.java:169)
                at sun.jvm.hotspot.tools.soql.JSDB.main(JSDB.java:35)

              Assignee:
              Dmitriy Samersoff
              Reporter:
              Fui-Shien Choong (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              10 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: